feat(announcements): announcement management system (#85)
Closes #76
