# api/openapi/medincident.swagger.json
@@ -1,10 +1,13 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "command/incident/buffer/v1/buffer.proto",
+    "title": "command/announcement/v1/announcement.proto",
     "version": "version not set"
   },
   "tags": [
+    {
+      "name": "AnnouncementCommandService"
+    },
     {
       "name": "IncidentBufferCommandService"
     },
@@ -19,6 +22,9 @@
     },
     {
       "name": "OrgStructureCommandService"
+    },
+    {
+      "name": "AnnouncementQueryService"
     },
     {
       "name": "IncidentClassifierQueryService"
@@ -43,6 +49,174 @@
     "application/json"
   ],
   "paths": {
+    "/v1/announcements": {
+      "post": {
+        "operationId": "AnnouncementCommandService_CreateAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CreateAnnouncementRequest"
+            }
+          }
+        ],
+        "tags": [
+          "AnnouncementCommandService"
+        ]
+      }
+    },
+    "/v1/announcements/{id}": {
+      "put": {
+        "operationId": "AnnouncementCommandService_UpdateAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UpdateAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AnnouncementCommandServiceUpdateAnnouncementBody"
+            }
+          }
+        ],
+        "tags": [
+          "AnnouncementCommandService"
+        ]
+      }
+    },
+    "/v1/announcements/{id}/priority": {
+      "put": {
+        "operationId": "AnnouncementCommandService_UpdateAnnouncementPriority",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UpdateAnnouncementPriorityResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AnnouncementCommandServiceUpdateAnnouncementPriorityBody"
+            }
+          }
+        ],
+        "tags": [
+          "AnnouncementCommandService"
+        ]
+      }
+    },
+    "/v1/announcements/{id}:archive": {
+      "post": {
+        "operationId": "AnnouncementCommandService_ArchiveAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ArchiveAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementCommandService"
+        ]
+      }
+    },
+    "/v1/announcements/{id}:unarchive": {
+      "post": {
+        "operationId": "AnnouncementCommandService_UnarchiveAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UnarchiveAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementCommandService"
+        ]
+      }
+    },
     "/v1/clinics/{clinicId}/departments": {
       "get": {
         "operationId": "OrgStructureQueryService_ListDepartmentsByClinic",
@@ -3663,6 +3837,158 @@
         ]
       }
     },
+    "/v1/query/announcements/{id}": {
+      "get": {
+        "operationId": "AnnouncementQueryService_GetAnnouncement",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetAnnouncementResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementQueryService"
+        ]
+      }
+    },
+    "/v1/query/clinics/{clinicId}/announcements": {
+      "get": {
+        "operationId": "AnnouncementQueryService_ListAnnouncementsForClinic",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListAnnouncementsForClinicResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "clinicId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "includeArchived",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "priority",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "ANNOUNCEMENT_PRIORITY_UNSPECIFIED",
+              "ANNOUNCEMENT_PRIORITY_NORMAL",
+              "ANNOUNCEMENT_PRIORITY_HIGH"
+            ],
+            "default": "ANNOUNCEMENT_PRIORITY_UNSPECIFIED"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "cursor",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementQueryService"
+        ]
+      }
+    },
+    "/v1/query/departments/{departmentId}/announcements": {
+      "get": {
+        "operationId": "AnnouncementQueryService_ListAnnouncementsForDepartment",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListAnnouncementsForDepartmentResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "departmentId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "includeArchived",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "priority",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "ANNOUNCEMENT_PRIORITY_UNSPECIFIED",
+              "ANNOUNCEMENT_PRIORITY_NORMAL",
+              "ANNOUNCEMENT_PRIORITY_HIGH"
+            ],
+            "default": "ANNOUNCEMENT_PRIORITY_UNSPECIFIED"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "cursor",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementQueryService"
+        ]
+      }
+    },
     "/v1/query/incidents/{id}": {
       "get": {
         "operationId": "IncidentQueryService_GetIncident",
@@ -3758,6 +4084,68 @@
         ],
         "tags": [
           "IncidentQueryService"
+        ]
+      }
+    },
+    "/v1/query/organizations/{organizationId}/announcements": {
+      "get": {
+        "operationId": "AnnouncementQueryService_ListAnnouncementsForOrganization",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ListAnnouncementsForOrganizationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "organizationId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "includeArchived",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "priority",
+            "description": "UNSPECIFIED = all",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "ANNOUNCEMENT_PRIORITY_UNSPECIFIED",
+              "ANNOUNCEMENT_PRIORITY_NORMAL",
+              "ANNOUNCEMENT_PRIORITY_HIGH"
+            ],
+            "default": "ANNOUNCEMENT_PRIORITY_UNSPECIFIED"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "cursor",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnnouncementQueryService"
         ]
       }
     },
@@ -4206,6 +4594,33 @@
     }
   },
   "definitions": {
+    "AnnouncementCommandServiceUpdateAnnouncementBody": {
+      "type": "object",
+      "properties": {
+        "title": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string"
+        },
+        "startsAt": {
+          "type": "string",
+          "title": "RFC3339Nano; absent = clear"
+        },
+        "endsAt": {
+          "type": "string",
+          "title": "RFC3339Nano; absent = clear"
+        }
+      }
+    },
+    "AnnouncementCommandServiceUpdateAnnouncementPriorityBody": {
+      "type": "object",
+      "properties": {
+        "priority": {
+          "$ref": "#/definitions/commandAnnouncementV1AnnouncementPriority"
+        }
+      }
+    },
     "IncidentBufferCommandServicePublishPatientIncidentBody": {
       "type": "object",
       "properties": {
@@ -4639,6 +5054,15 @@
       },
       "description": "Type mirrors projections.incident_types row."
     },
+    "commandAnnouncementV1AnnouncementPriority": {
+      "type": "string",
+      "enum": [
+        "ANNOUNCEMENT_PRIORITY_UNSPECIFIED",
+        "ANNOUNCEMENT_PRIORITY_NORMAL",
+        "ANNOUNCEMENT_PRIORITY_HIGH"
+      ],
+      "default": "ANNOUNCEMENT_PRIORITY_UNSPECIFIED"
+    },
     "commandIncidentV1IncidentPriority": {
       "type": "string",
       "enum": [
@@ -4670,6 +5094,15 @@
         }
       },
       "additionalProperties": {}
+    },
+    "queryAnnouncementV1AnnouncementPriority": {
+      "type": "string",
+      "enum": [
+        "ANNOUNCEMENT_PRIORITY_UNSPECIFIED",
+        "ANNOUNCEMENT_PRIORITY_NORMAL",
+        "ANNOUNCEMENT_PRIORITY_HIGH"
+      ],
+      "default": "ANNOUNCEMENT_PRIORITY_UNSPECIFIED"
     },
     "queryIncidentV1IncidentPriority": {
       "type": "string",
@@ -4751,6 +5184,61 @@
       ]
     },
     "v1AllowIncidentTypeForPatientsResponse": {
+      "type": "object"
+    },
+    "v1AnnouncementView": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        },
+        "organizationId": {
+          "type": "string"
+        },
+        "clinicId": {
+          "type": "string"
+        },
+        "departmentId": {
+          "type": "string"
+        },
+        "authorId": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string"
+        },
+        "priority": {
+          "$ref": "#/definitions/queryAnnouncementV1AnnouncementPriority"
+        },
+        "isArchived": {
+          "type": "boolean"
+        },
+        "startsAt": {
+          "type": "string",
+          "title": "RFC3339Nano"
+        },
+        "endsAt": {
+          "type": "string",
+          "title": "RFC3339Nano"
+        },
+        "createdAt": {
+          "type": "string",
+          "title": "RFC3339Nano"
+        },
+        "updatedAt": {
+          "type": "string",
+          "title": "RFC3339Nano"
+        },
+        "viewCount": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "v1ArchiveAnnouncementResponse": {
       "type": "object"
     },
     "v1AssignClinicHeadDeputyResponse": {
@@ -5003,6 +5491,45 @@
         }
       }
     },
+    "v1CreateAnnouncementRequest": {
+      "type": "object",
+      "properties": {
+        "organizationId": {
+          "type": "string"
+        },
+        "clinicId": {
+          "type": "string"
+        },
+        "departmentId": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "content": {
+          "type": "string"
+        },
+        "priority": {
+          "$ref": "#/definitions/commandAnnouncementV1AnnouncementPriority"
+        },
+        "startsAt": {
+          "type": "string",
+          "title": "RFC3339Nano"
+        },
+        "endsAt": {
+          "type": "string",
+          "title": "RFC3339Nano"
+        }
+      }
+    },
+    "v1CreateAnnouncementResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string"
+        }
+      }
+    },
     "v1CreateClinicResponse": {
       "type": "object",
       "properties": {
@@ -5222,6 +5749,14 @@
     },
     "v1ForceEndVacationResponse": {
       "type": "object"
+    },
+    "v1GetAnnouncementResponse": {
+      "type": "object",
+      "properties": {
+        "announcement": {
+          "$ref": "#/definitions/v1AnnouncementView"
+        }
+      }
     },
     "v1GetBufferEntryResponse": {
       "type": "object",
@@ -5468,6 +6003,51 @@
             "type": "object",
             "$ref": "#/definitions/classifierV1Type"
           }
+        }
+      }
+    },
+    "v1ListAnnouncementsForClinicResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1AnnouncementView"
+          }
+        },
+        "nextCursor": {
+          "type": "string"
+        }
+      }
+    },
+    "v1ListAnnouncementsForDepartmentResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1AnnouncementView"
+          }
+        },
+        "nextCursor": {
+          "type": "string"
+        }
+      }
+    },
+    "v1ListAnnouncementsForOrganizationResponse": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1AnnouncementView"
+          }
+        },
+        "nextCursor": {
+          "type": "string"
         }
       }
     },
@@ -6036,6 +6616,15 @@
       "description": "SystemAdminView is the system-admin role; system admins are rooted in\nZitadel user ids, not employee ids."
     },
     "v1TerminateEmployeeResponse": {
+      "type": "object"
+    },
+    "v1UnarchiveAnnouncementResponse": {
+      "type": "object"
+    },
+    "v1UpdateAnnouncementPriorityResponse": {
+      "type": "object"
+    },
+    "v1UpdateAnnouncementResponse": {
       "type": "object"
     },
     "v1UpdateClinicDetailsResponse": {
